<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.xy.connect</groupId>
    <artifactId>im-connect</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>im-connect</name>
    <description>im-connect</description>


    <properties>
        <!-- 统一版本号 -->
        <project.version>1.0-SNAPSHOT</project.version>

        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <netty.version>4.2.6.Final</netty.version>
        <slf4j.version>1.7.25</slf4j.version>
        <logback.version>1.4.12</logback.version>
        <hutool.version>5.8.25</hutool.version>
        <redis.version>4.2.3</redis.version>
        <jackson.version>2.15.2</jackson.version>
        <rabbitmq.version>5.20.0</rabbitmq.version>
        <jedis.version>4.4.0</jedis.version>
        <lombok.version>1.18.30</lombok.version>
        <snakeyaml.version>2.2</snakeyaml.version>
        <logback.version>1.1.11</logback.version>
        <nacos.version>3.0.3</nacos.version>
        <google.protobuf.version>4.29.5</google.protobuf.version>
        <sentinel.version>1.8.8</sentinel.version>
    </properties>


    <dependencies>

        <dependency>
            <groupId>com.xy</groupId>
            <artifactId>im-core</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.xy</groupId>
            <artifactId>im-spring</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <!--  lombok-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>

        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
            <version>${jedis.version}</version>
        </dependency>

        <!--rabbitmq依赖引用-->
        <dependency>
            <groupId>com.rabbitmq</groupId>
            <artifactId>amqp-client</artifactId>
            <version>${rabbitmq.version}</version>
        </dependency>

        <!-- 引入jackson依赖包-->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!--Hutool-->
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
            <version>${hutool.version}</version>
        </dependency>

        <!-- netty -->
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>${netty.version}</version>
        </dependency>

        <!--  slf4j-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>com.alibaba.nacos</groupId>
            <artifactId>nacos-client</artifactId>
            <version>${nacos.version}</version>
            <exclusions>
                <!--排除snakeyaml依赖-->
                <exclusion>
                    <groupId>org.yaml</groupId>
                    <artifactId>snakeyaml</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.alibaba.csp</groupId>
            <artifactId>sentinel-core</artifactId>
            <version>${sentinel.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>${google.protobuf.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java-util</artifactId>
            <version>${google.protobuf.version}</version>
        </dependency>

    </dependencies>


    <build>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <!-- 原生编译支持 -->
            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
            </plugin>

            <!-- Spring Boot Maven 插件 -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!-- Profiles配置 -->
    <profiles>
        <!-- 开发环境 -->
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <!-- Nacos 配置中心配置 -->
                <nacos.config.server-addr>localhost:8848</nacos.config.server-addr>
                <nacos.config.namespace>public</nacos.config.namespace>
                <nacos.config.group>DEFAULT_GROUP</nacos.config.group>

                <!-- Nacos 服务发现配置 -->
                <nacos.discovery.server-addr>localhost:8848</nacos.discovery.server-addr>
                <nacos.discovery.username>nacos</nacos.discovery.username>
                <nacos.discovery.password>Lucky20251001</nacos.discovery.password>

                <sentinel.dashboard.url>http://localhost:20000</sentinel.dashboard.url>

                <!-- 应用 Profile -->
                <app.profiles.active>dev</app.profiles.active>
            </properties>
        </profile>

        <!-- 测试环境 -->
        <profile>
            <id>test</id>
            <properties>
                <!-- Nacos 配置中心配置 -->
                <nacos.config.server-addr>test.nacos.server:8848</nacos.config.server-addr>
                <nacos.config.namespace>test</nacos.config.namespace>
                <nacos.config.group>TEST_GROUP</nacos.config.group>

                <!-- Nacos 服务发现配置 -->
                <nacos.discovery.server-addr>test.nacos.server:8848</nacos.discovery.server-addr>
                <nacos.discovery.username>nacos</nacos.discovery.username>
                <nacos.discovery.password>nacos</nacos.discovery.password>

                <!-- 应用 Profile -->
                <app.profiles.active>test</app.profiles.active>
            </properties>
        </profile>

        <!-- 生产环境 -->
        <profile>
            <id>prod</id>
            <properties>
                <!-- Nacos 配置中心配置 -->
                <nacos.config.server-addr>prod.nacos.server:8848</nacos.config.server-addr>
                <nacos.config.namespace>prod</nacos.config.namespace>
                <nacos.config.group>PROD_GROUP</nacos.config.group>

                <!-- Nacos 服务发现配置 -->
                <nacos.discovery.server-addr>prod.nacos.server:8848</nacos.discovery.server-addr>
                <nacos.discovery.username></nacos.discovery.username>
                <nacos.discovery.password></nacos.discovery.password>

                <!-- 应用 Profile -->
                <app.profiles.active>prod</app.profiles.active>
            </properties>
        </profile>
    </profiles>


</project>
